--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         const clearAllBtn = document.getElementById('clearAllBtn');
         
         // --- ❗❗❗ 여기에 배포 후 나온 Function URL을 붙여넣으세요 ❗❗❗ ---
-        const BACKEND_URL = "https://us-central1-youtubu-c770d.cloudfunctions.net/getVideoInfo"; 
+        const BACKEND_URL = "https://getvideoinfo-jwzyh4xuka-uc.a.run.app"; 
         
         let playlist = [];
 
@@ -155,4 +155,5 @@
     </script>
 </body>
 </html>
+
 
