--- a/index.html
+++ b/index.html
@@ -5,12 +5,200 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>프리미엄 플레이어</title>
 
+    <!-- PWA 설정 -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1e1e1e">
     <link rel="apple-touch-icon" href="icons/icon-192x192.png">
     
+    <!-- CSS: 디자인 및 스타일 -->
     <style>
-        :root{--bg-color:#121212;--surface-color:#1e1e1e;--primary-color:#bb86fc;--secondary-color:#03dac6;--text-color:#e0e0e0;--subtle-text-color:#888;--border-color:#333;--danger-color:#cf6679;}body{margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;background-color:var(--bg-color);color:var(--text-color);padding:20px;box-sizing:border-box;}.app-container{width:100%;max-width:480px;margin:0 auto;background-color:var(--surface-color);border-radius:24px;box-shadow:0 10px 30px rgba(0,0,0,.3);padding:25px;box-sizing:border-box;overflow:hidden;}header h1{text-align:center;font-size:26px;color:var(--primary-color);margin:0 0 25px 0;}.input-section{display:flex;gap:10px;margin-bottom:25px;}#youtubeUrl{flex-grow:1;background-color:var(--bg-color);border:1px solid var(--border-color);border-radius:12px;padding:14px;font-size:16px;color:var(--text-color);}#youtubeUrl:focus{outline:none;border-color:var(--primary-color);}#addBtn{padding:0 20px;font-size:16px;font-weight:600;border:none;border-radius:12px;cursor:pointer;color:#121212;background:linear-gradient(45deg,var(--primary-color),var(--secondary-color));touch-action:manipulation;}#addBtn:disabled{background:var(--border-color);color:var(--subtle-text-color);cursor:not-allowed;}.player-section{margin-bottom:25px;}#nowPlaying{font-size:14px;color:var(--subtle-text-color);text-align:center;margin-bottom:10px;height:20px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}video{width:100%;border-radius:12px;background-color:#000;}.playlist-controls{display:flex;justify-content:space-between;align-items:center;margin-bottom:15px;padding:0 5px;}.playlist-controls label{display:flex;align-items:center;gap:8px;cursor:pointer;}.control-buttons{display:flex;gap:10px;}.control-buttons button{background:none;border:1px solid var(--border-color);color:var(--subtle-text-color);padding:8px 12px;border-radius:8px;cursor:pointer;font-size:12px;}.control-buttons button.danger{border-color:var(--danger-color);color:var(--danger-color);}#playlist{list-style:none;padding:0;margin:0;max-height:300px;overflow-y:auto;}#playlist li{display:flex;align-items:center;gap:15px;padding:10px;border-radius:10px;cursor:pointer;transition:background-color .2s;}#playlist li:hover{background-color:rgba(255,255,255,.05);}.thumbnail{width:80px;height:45px;border-radius:6px;object-fit:cover;flex-shrink:0;}.video-info{flex-grow:1;overflow:hidden;}.video-info .title{font-size:15px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin:0 0 4px 0;}.video-info .channel{font-size:12px;color:var(--subtle-text-color);margin:0;}input[type=checkbox]{appearance:none;width:20px;height:20px;border:2px solid var(--subtle-text-color);border-radius:6px;cursor:pointer;position:relative;}input[type=checkbox]:checked{background-color:var(--primary-color);border-color:var(--primary-color);}input[type=checkbox]:checked::after{content:'✔';color:var(--surface-color);position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);font-size:14px;}
+        :root {
+            --bg-color: #121212;
+            --surface-color: #1e1e1e;
+            --primary-color: #bb86fc;
+            --secondary-color: #03dac6;
+            --text-color: #e0e0e0;
+            --subtle-text-color: #888;
+            --border-color: #333;
+            --danger-color: #cf6679;
+        }
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            padding: 20px;
+            box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            /* ✨ 화면 잘림 현상 해결: 컨테이너를 위쪽에 정렬 */
+            align-items: flex-start; 
+            min-height: 100vh;
+        }
+        .app-container {
+            width: 100%;
+            max-width: 480px;
+            margin: 0 auto;
+            background-color: var(--surface-color);
+            border-radius: 24px;
+            box-shadow: 0 10px 30px rgba(0,0,0,.3);
+            padding: 25px;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+        header h1 {
+            text-align: center;
+            font-size: 26px;
+            color: var(--primary-color);
+            margin: 0 0 25px 0;
+        }
+        .input-section {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 25px;
+        }
+        #youtubeUrl {
+            flex-grow: 1;
+            background-color: var(--bg-color);
+            border: 1px solid var(--border-color);
+            border-radius: 12px;
+            padding: 14px;
+            font-size: 16px;
+            color: var(--text-color);
+        }
+        #youtubeUrl:focus {
+            outline: none;
+            border-color: var(--primary-color);
+        }
+        #addBtn {
+            padding: 0 20px;
+            font-size: 16px;
+            font-weight: 600;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            color: #121212;
+            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+            touch-action: manipulation;
+        }
+        #addBtn:disabled {
+            background: var(--border-color);
+            color: var(--subtle-text-color);
+            cursor: not-allowed;
+        }
+        .player-section {
+            margin-bottom: 25px;
+        }
+        #nowPlaying {
+            font-size: 14px;
+            color: var(--subtle-text-color);
+            text-align: center;
+            margin-bottom: 10px;
+            height: 20px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        video {
+            width: 100%;
+            border-radius: 12px;
+            background-color: #000;
+        }
+        .playlist-controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+            padding: 0 5px;
+        }
+        .playlist-controls label {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            cursor: pointer;
+        }
+        .control-buttons {
+            display: flex;
+            gap: 10px;
+        }
+        .control-buttons button {
+            background: none;
+            border: 1px solid var(--border-color);
+            color: var(--subtle-text-color);
+            padding: 8px 12px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 12px;
+        }
+        .control-buttons button.danger {
+            border-color: var(--danger-color);
+            color: var(--danger-color);
+        }
+        #playlist {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+        #playlist li {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            padding: 10px;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: background-color .2s;
+        }
+        #playlist li:hover {
+            background-color: rgba(255,255,255,.05);
+        }
+        .thumbnail {
+            width: 80px;
+            height: 45px;
+            border-radius: 6px;
+            object-fit: cover;
+            flex-shrink: 0;
+        }
+        .video-info {
+            flex-grow: 1;
+            overflow: hidden;
+        }
+        .video-info .title {
+            font-size: 15px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin: 0 0 4px 0;
+        }
+        .video-info .channel {
+            font-size: 12px;
+            color: var(--subtle-text-color);
+            margin: 0;
+        }
+        input[type=checkbox] {
+            appearance: none;
+            -webkit-appearance: none;
+            width: 20px;
+            height: 20px;
+            border: 2px solid var(--subtle-text-color);
+            border-radius: 6px;
+            cursor: pointer;
+            position: relative;
+        }
+        input[type=checkbox]:checked {
+            background-color: var(--primary-color);
+            border-color: var(--primary-color);
+        }
+        input[type=checkbox]:checked::after {
+            content: '✔';
+            color: var(--surface-color);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
@@ -43,11 +231,13 @@
                     </div>
                 </div>
                 <ul id="playlist">
-                    </ul>
+                    <!-- 플레이리스트 아이템이 여기에 동적으로 추가됩니다. -->
+                </ul>
             </div>
         </main>
     </div>
 
+    <!-- 서비스 워커 등록 스크립트 -->
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -62,6 +252,7 @@
       }
     </script>
     
+    <!-- 앱 기능 전체 스크립트 -->
     <script>
         const urlInput = document.getElementById('youtubeUrl');
         const addBtn = document.getElementById('addBtn');
@@ -91,7 +282,7 @@
                     const li = document.createElement('li');
                     li.innerHTML = `
                         <input type="checkbox" class="item-checkbox" data-index="${index}">
-                        <img class="thumbnail" src="${video.thumbnail}" alt="Video thumbnail">
+                        <img class="thumbnail" src="${video.thumbnail}" alt="영상 썸네일">
                         <div class="video-info">
                             <h3 class="title">${video.title}</h3>
                             <p class="channel">${video.channel}</p>
@@ -110,10 +301,6 @@
             const url = urlInput.value.trim();
             if (!isValidYouTubeUrl(url)) {
                 alert("올바른 유튜브 링크를 입력해주세요.");
-                return;
-            }
-            if (BACKEND_URL === "YOUR_FUNCTION_URL") {
-                alert("백엔드 URL을 설정해주세요!");
                 return;
             }
 
@@ -218,6 +405,8 @@
             localStorage.setItem('premiumPlaylist', JSON.stringify(playlist));
         }
 
+
+
         function loadPlaylist(){
             const savedPlaylist = localStorage.getItem('premiumPlaylist');
             if (savedPlaylist) {
@@ -232,3 +421,4 @@
     </script>
 </body>
 </html>
+
