--- a/index.html
+++ b/index.html
@@ -472,6 +472,20 @@
 
         // 앱 시작 시 Firebase에서 데이터 로드
         loadItemsFromFirebase(); 
+
+                // PWA: 서비스 워커 등록
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then(registration => {
+                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                    })
+                    .catch(error => {
+                        console.log('ServiceWorker registration failed: ', error);
+                    });
+            });
+        }
     </script>
 </body>
 </html>
+
