--- a/index.html
+++ b/index.html
@@ -473,19 +473,23 @@
         // 앱 시작 시 Firebase에서 데이터 로드
         loadItemsFromFirebase(); 
 
-                // PWA: 서비스 워커 등록
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js')
-                    .then(registration => {
-                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                    })
-                    .catch(error => {
-                        console.log('ServiceWorker registration failed: ', error);
-                    });
+// PWA: 서비스 워커 등록
+if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+        // 리포지토리 이름을 포함하여 경로와 Scope를 정확히 지정합니다.
+        // GitHub Pages 프로젝트 페이지 구조에 필수적입니다.
+        navigator.serviceWorker.register('/youtube/service-worker.js', { scope: '/youtube/' })
+            .then(registration => {
+                console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            })
+            .catch(error => {
+                // 이전에 'A bad HTTP response code (404)' 오류가 났던 지점입니다.
+                console.error('ServiceWorker registration failed: ', error);
             });
-        }
+    });
+}
     </script>
 </body>
 </html>
+
 
