--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <link rel="icon" type="image/png" href="/youtube/icons/icon-192x192.png">
+    <link rel="manifest" href="/youtube/manifest.json">
     <title>My Cloud Box - Pro</title>
     <style>
         /* --- 기본 & 테마 --- */
@@ -491,5 +493,6 @@ if ('serviceWorker' in navigator) {
     </script>
 </body>
 </html>
+
 
 
