--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; background-color: var(--bg-color); color: var(--primary-text); }
 
-        /* --- 레이아웃 --- */
-        .app-container {
-            display: grid;
-            grid-template-columns: 360px 1fr;
-            width: 100vw;
-            height: 100vh;
-        }
+/* --- 레이아웃 --- */
+.app-container {
+    display: grid;
+    grid-template-columns: 360px 1fr; /* PC: 사이드바 너비 고정 */
+    width: 100%; /* 기존 100vw -> 100%로 변경 */
+    height: 100vh;
+}
         
         .input-column {
             background-color: var(--sidebar-color);
@@ -147,34 +147,35 @@
         #confirmModal h3 { margin-bottom: 20px; }
         #confirmModal .modal-actions { justify-content: center; }
         
-        /* --- 모바일 반응형 --- */
-        @media (max-width: 900px) {
-            .app-container { 
-                grid-template-columns: 1fr; 
-                padding: 0; 
-                height: auto;
-                min-height: 100vh;
-            }
-            .input-column { 
-                border-right: none;
-                position: relative; 
-                z-index: 10;
-            }
-            .list-column { 
-                height: auto; 
-                overflow-y: initial; 
-            }
-            .list-container {
-                max-height: 50vh; 
-                flex-shrink: 0;
-            }
-            .modal-content { 
-                width: 100%; 
-                height: 100%; 
-                border-radius: 0; 
-                padding: 16px; 
-            }
-        }
+       /* 모바일 전용 */
+@media (max-width: 900px) {
+    .app-container {
+        grid-template-columns: 1fr;
+        padding: 0;
+        height: auto;
+        min-height: 100vh;
+        width: 100%; /* 모바일에서도 100%를 명시하여 뷰포트 문제 해결 */
+    }
+    .input-column {
+        border-right: none;
+        position: relative;
+        z-index: 10;
+    }
+    .list-column {
+        height: auto;
+        overflow-y: initial;
+    }
+    .list-container {
+        max-height: 50vh;
+        flex-shrink: 0;
+    }
+    .modal-content {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        padding: 16px;
+    }
+}
 
         /* --- Custom 모달용 스타일 (기존 코드 유지) --- */
         .modal-overlay { align-items: center; justify-content: center; }
@@ -707,3 +708,4 @@
     </script>
 </body>
 </html>
+
